--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/router": "^10.1.1",
+    "dotenv": "^16.0.0",
+    "knex": "^1.0.4",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
-    "supertest": "^6.1.6"
+    "mysql2": "^2.3.3",
+    "supertest": "^6.1.6",
+    "winston": "^3.6.0"
   }
 }
