--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
   "compilerOptions": {
-		"baseUrl": "src",
-		"outDir": "dist",
+    "baseUrl": "src",
+    "outDir": "dist",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "module": "commonjs",
     "noImplicitAny": false,
     "skipLibCheck": true,
     "strict": true,
-    "target": "es2021",
-		"paths": {
+    "target": "esnext",
+    "paths": {
       "*": [
         "node_modules/*"
       ],
