feat: migrations, validation e mais

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
-DB_PORT=3306
-DB_USER=
-DB_PASSWORD=
+DB_PORT=5200
+DB_USER=root
+DB_PASSWORD=123password
 DB_NAME=node_sample
 DB_DEBUG=true
