--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@koa/router": "^10.1.1",
     "@types/yup": "^0.29.13",
     "dotenv": "^16.0.0",
+    "joi": "^17.6.0",
+    "joi-to-swagger": "^6.0.1",
     "knex": "^1.0.4",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
