--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^8.1.0",
     "eslint-plugin-import": "^2.25.2",
-    "glob": "^7.2.0",
     "jest": "^27.3.1",
     "nodemon": "^2.0.14",
     "ts-jest": "^27.0.7",
@@ -34,6 +33,8 @@
     "@koa/router": "^10.1.1",
     "@types/yup": "^0.29.13",
     "dotenv": "^16.0.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "glob": "^7.2.0",
     "joi": "^17.6.0",
     "joi-to-swagger": "^6.0.1",
     "knex": "^1.0.4",
