--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^8.1.0",
     "eslint-plugin-import": "^2.25.2",
+    "http-status-codes": "^2.2.0",
     "jest": "^27.3.1",
     "nodemon": "^2.0.14",
     "ts-jest": "^27.0.7",
