--- a/package.json
+++ b/package.json
@@ -6,51 +6,54 @@
   "author": "Vitor Spadacio Pisani <vsp193@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --ignore '*.test.ts' --watch src -e ts --exec ts-node -r tsconfig-paths/register src/index.ts",
-    "test": "jest --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura --coverageReporters=lcov",
+    "start": "NODE_ENV=development nodemon",
+    "build": "rm -rf dist && tsc",
+    "postbuild": "cp package.json dist/package.json && cd dist && yarn install --only=production",
+    "test": "jest --coverage",
     "test:watch": "jest --watch",
     "init:swagger": "ts-node src/startup/create-swagger-json.ts",
     "migrate:latest": "knex migrate:latest"
   },
   "devDependencies": {
-    "@types/faker": "^5.5.9",
-    "@types/jest": "^27.0.2",
-    "@types/koa": "^2.13.4",
-    "@types/koa-bodyparser": "^4.3.3",
-    "@types/koa__router": "^8.0.8",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@types/faker": "^6.6.9",
+    "@types/jest": "^29.5.2",
+    "@types/koa": "^2.13.6",
+    "@types/koa-bodyparser": "^4.3.10",
+    "@types/koa__router": "^12.0.0",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.2.0",
-    "eslint": "^8.1.0",
-    "eslint-plugin-import": "^2.25.2",
-    "jest": "^27.3.1",
-    "jest-junit": "^13.2.0",
-    "nodemon": "^2.0.14",
-    "ts-jest": "^27.0.7",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.4.4"
+    "eslint": "^8.43.0",
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
+    "nodemon": "^2.0.22",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.5"
   },
   "dependencies": {
-    "@faker-js/faker": "^6.1.2",
-    "@koa/cors": "^3.1.0",
-    "@koa/router": "^10.1.1",
-    "@types/yup": "^0.29.13",
-    "dotenv": "^16.0.0",
+    "@faker-js/faker": "^8.0.2",
+    "@koa/cors": "^4.0.0",
+    "@koa/router": "^12.0.0",
+    "@types/yup": "^0.32.0",
+    "dotenv": "^16.3.1",
     "eslint-config-airbnb-base": "^15.0.0",
-    "glob": "^7.2.0",
+    "glob": "^10.3.1",
     "http-status-codes": "^2.2.0",
-    "joi": "^17.6.0",
-    "joi-to-swagger": "^6.0.1",
-    "knex": "^1.0.4",
-    "koa": "^2.13.4",
-    "koa-bodyparser": "^4.3.0",
+    "joi": "^17.9.2",
+    "joi-to-swagger": "^6.2.0",
+    "knex": "^2.4.2",
+    "koa": "^2.14.2",
+    "koa-bodyparser": "^4.4.1",
     "koa-response2": "^1.0.4",
-    "koa2-swagger-ui": "^5.5.0",
-    "mysql2": "^2.3.3",
-    "supertest": "^6.1.6",
-    "swagger-autogen": "^2.20.5",
-    "winston": "^3.6.0",
-    "yup": "^0.32.11"
+    "koa2-swagger-ui": "^5.8.0",
+    "mysql2": "^3.4.2",
+    "node-fetch": "2",
+    "supertest": "^6.3.3",
+    "swagger-autogen": "^2.23.4",
+    "winston": "^3.9.0",
+    "yup": "^1.2.0"
   }
 }
