--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "commonjs",
+    "module": "node16",
+    "moduleResolution": "node",
     "noImplicitAny": false,
     "skipLibCheck": true,
     "strict": true,
@@ -20,4 +21,8 @@
       ]
     },
   },
+  "exclude": [
+    "./**/*.test.ts",
+    "./**/test/",
+  ]
 }
