--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "node-fetch": "2",
     "supertest": "^6.3.3",
     "swagger-autogen": "^2.23.4",
+    "unix-timestamp": "^1.0.3",
     "winston": "^3.9.0",
     "yup": "^1.2.0"
   }
