--- a/.env.test
+++ b/.env.test
@@ -5,3 +5,8 @@ DB_PASSWORD=12password
 DB_NAME=node_sample_test
 DB_DEBUG=false
 PORT=3000
+BING_URL=http://bing.url
+OPENWEATHER_URL=http://openweather.url/
+OPENWEATHER_APPID=123456789
+OPENCAGE_URL=http://opencage.url
+OPENCAGE_KEY=123456789
