--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/yup": "^0.32.0",
     "dotenv": "^16.3.1",
     "eslint-config-airbnb-base": "^15.0.0",
+    "fix-esm": "^1.0.1",
     "glob": "^10.3.1",
     "http-status-codes": "^2.2.0",
     "joi": "^17.9.2",
@@ -56,5 +57,6 @@
     "unix-timestamp": "^1.0.3",
     "winston": "^3.9.0",
     "yup": "^1.2.0"
-  }
+  },
+  "packageManager": "yarn@3.6.0"
 }
